avoid title text overflow in control bar

--- a/src/Components/PlayControl/SeekBar/index.less
+++ b/src/Components/PlayControl/SeekBar/index.less
@@ -7,6 +7,8 @@
   justify-content: center;
   margin: 0 20px;
   color: #fff;
+  overflow: hidden;
+  white-space: nowrap;
 
   >.info {
     position: absolute;
